--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask==0.12.2
 flask-cors==3.0.6
 gunicorn==19.7.1
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.0
 numpy==1.16
 python-dateutil==2.7.0
